max width to prevent page overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .plugin_latexcaption_figure {
     width: fit-content;
+    max-width: 100%;
 }
 
 .plugin_latexcaption_subfigure,
